// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests of subjects giving consent Should not allow a new subject to give consent without specifying the consented processors 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processors\\" fails because [\\"processors\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processors",
    ],
    "source": "body",
  },
}
`;

exports[`Tests of subjects initiating rectifications Error if error reason and payload are not provided 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"requestReason\\" fails because [\\"requestReason\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "requestReason",
    ],
    "source": "body",
  },
}
`;

exports[`Tests of subjects objecting to the processing of their data Should not allow a subject that has given consent to object without specifying the objection 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"objection\\" fails because [\\"objection\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "objection",
    ],
    "source": "body",
  },
}
`;

exports[`Tests of subjects restricting the processing of their data Should not allow a subject that has given consent to restrict without specifying the actions to restrict 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"directMarketing\\" fails because [\\"directMarketing\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "directMarketing",
    ],
    "source": "body",
  },
}
`;

exports[`Tests of subjects updating their consented processors Should not allow a subject to update consent without specifying the processors consented 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processors\\" fails because [\\"processors\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processors",
    ],
    "source": "body",
  },
}
`;
